--- a/_includes/about.html
+++ b/_includes/about.html
@@ -3,12 +3,12 @@
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2">
               <br/><br/>
-              <h2>About Landing-Page</h2>
+              <h2>About Us</h2>
               <br/>
-                <p>Landing-Page is a free Bootstrap 3 theme created by Start Bootstrap. It can be yours right now, simply download the template on <a href="http://startbootstrap.com/template-overviews/landing-page/">the preview page</a>. The theme is open source, and you can use it for any purpose, personal or commercial.</p>
-                <p>The Jekyll version is brought to you by <a href="https://github.com/swcool">Shane Weng</a></p>
-                <p>This theme features stock photos by <a href="http://join.deathtothestockphoto.com//">Death to the Stock Photo</a>.</p>
-                <p>Landing-Page includes full HTML, CSS, and custom JavaScript files along with LESS files for easy customization.</p>
+                <p>Saivian 賽比安 於2016年2月27日掛牌進軍美國市場</p>
+                <p>是一種全新的省錢、賺錢模式，在日常消費中獲得20%現金回饋<a href="http://startbootstrap.com/template-overviews/landing-page/"></a></p>
+                <p>目前在日本、香港、泰國、紐西蘭、韓國等25個國家迅速成長中</p>
+
                 <br/>
               </div>
         </div>
