--- a/_includes/header.html
+++ b/_includes/header.html
@@ -42,13 +42,15 @@
 						<h1>{{ page.title }}</h1>
 						<h3>{{ page.subTitle }}</h3>
 						<hr class="intro-divider">
-						<ul class="list-inline intro-social-buttons">
-							{% for social in site.social %}
+
+<!--					<ul class="list-inline intro-social1-buttons">
+							{% for social1 in site.social1 %}
 							<li>
-								<a href="{{ social.url }}" class="btn btn-default btn-lg"><i class="fa fa-{{ social.title }} fa-fw"></i> <span class="network-name">{{ social.title }}</span></a>
+								<a href="{{ social1.url }}" class="btn btn-default btn-lg"><i class="fa fa-{{ social1.title }} fa-fw"></i> <span class="network-name">{{ social1.title }}</span></a>
 							</li>
 							{% endfor %}
 						</ul>
+-->
 					</div>
 				</div>
 			</div>
