--- a/css/landing-page.css
+++ b/css/landing-page.css
@@ -112,7 +112,7 @@ h6 {
 .banner {
     padding: 100px 0;
     color: #f8f8f8;
-    background: url(../img/homebanner.jpg) no-repeat center center;
+    background: url(../img/bottombanner.jpg) no-repeat center center;
     background-size: cover;
 }
 
