--- a/_includes/about.html
+++ b/_includes/about.html
@@ -5,7 +5,7 @@
               <br/><br/>
               <h2>About Us</h2>
               <br/>
-                <p>Saivian 賽比安 於2016年2月27日掛牌進軍美國市場</p>
+                <p>Saivian 賽比安 於2016年2月27日進軍美國市場</p>
                 <p>是一種全新的省錢、賺錢模式，在日常消費中獲得20%現金回饋<a href="http://startbootstrap.com/template-overviews/landing-page/"></a></p>
                 <p>目前在日本、香港、泰國、紐西蘭、韓國等25個國家迅速成長中</p>
 
